<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="banner_ad_unit_id">ca-app-pub-2544282160390706/4460493931</string>

    <!-- Strings related to login -->

    <string name="action_sign_in"><b>Sign in</b></string>
    <!-- Strings related to login -->

    <string name="action_forgetting">Show password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="image_help">Full size images</string>
    <string name="search_word">Search Words</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_name"><b>Jam Speak</b></string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pass_word">PassWord</string>
    <string name="login"><b>Login</b></string>
    <string name="user_name">UserName</string>
    <string name="background_image">Background Image</string>
    <string name="show_password"></string>
    <string name="reset_password">Forgot something? Reset your password</string>
    <string name="title_activity_home"><b>Home</b></string>
    <string name="a_picture">This is a picture</string>
    <string name="food_view">Foods</string>
    <string name="greeting_view">Greetings </string>
    <string name="thing_view">Things </string>
    <string name="title_activity_home_lesson">Lesson</string>
    <string name="lesson_image_content">I</string>
    <string name="answer">Answer</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="catch_media_id">catch</string>
    <string name="title_activity_word">Word</string>
    <string name="auto_complete">Enter Words </string>
    <string name="gallery">Gallery</string>
    <string name="maplocation">Locations</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_map">Locations</string>
    <string name="random">Random</string>
    <string name="jam_dictionary"><b>Jam Speak </b></string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last name </string>
    <string name="title_activity_fragment_lesson">FragmentLesson</string>
    <string name="title_activity_fragment_culture">FragmentCulture</string>
    <string name="title_activity_fragment_word">FragmentWord</string>
    <string name="back">back</string>
    <string name="check">Check</string>
    <string name="title_activity_forgetting">Forget Password</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="profile"><b>Profile</b></string>
    <string name="Logout">Logout</string>
    <string name="map"><b>Map</b></string>
    <string name="title_activity_full_image">FullImageActivity</string>
    <string name="wordComplete">Words</string>
    <string name="colorTextView">#ffcc33</string>
    <string name="wordImage">wordImage</string>
    <string name="wordMeaning">WordMeaning</string>
    <string name="rowItem">rowItem</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="About_Us">About Us</string>
    <string name="Tell_A_Friend">Tell A Friend</string>
    <string name="search_hint">Search Words</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="title_activity_share_us">ShareUsActivity</string>
    <string name="catchMediaWebsite">www.catchmedia.co</string>
    <string name="catchName">CatchMedia</string>
    <string name="title_activity_translator">TranslatorActivity</string>
    <string name="title_activity_places_to_see">PlacesToSeeActivity</string>
    <string name="title_activity_add_word_to_server">AddWordToServerActivity</string>
    <string name="send_feed_back">Send Feedback</string>
    <string name="ApiAddress">http://www.catchmedia.co/api/BlogPostApi/GetAllTourismAttraction</string>

</resources>