<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressActivity" >

    <utility.PieGraph
        android:id="@+id/pie"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:text="@string/Logout" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pie"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="60dp"
        android:text="@string/greeting_view"
        android:textColor="#ffcc33"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="28dp"
        android:text="@string/food_view"
        android:textColor="#E82B19"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Logout"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="27dp"
        android:text="@string/thing_view"
        android:textColor="#32E84C"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/wordComplete"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/foodPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/greetingPro"
        android:text="TextView"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/thingPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/foodPro"
        android:text="TextView"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/greetingPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="26dp"
        android:text="TextView"
        android:textSize="20sp" />

</RelativeLayout>